# bm3dornl

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  benchmark_speed.py  environment.yml  paper.md  pyproject.toml  verify_real_data.py  verify_synthetic_streaks.py
.github/workflows/: build.yml  gui.yml  package.yml  release.yml  test.yml  unittest.yml
benchmarks/: measure_memory.py  measure_speed.py  measure_stack_speed.py
conda.recipe/: meta.yaml
docs/: FAQ.md  JAX_MIGRATION_PLAN.md  JAX_MIGRATION_SUMMARY.md  README.md  api.rst  conf.py  developer.rst  gui.rst  index.rst  installation.rst  parameters.rst  requirements.txt  tutorial.rst  user.rst
docs/api/: bm3dornl.rst  modules.rst
notebooks/: demo_denoise_mode.ipynb  evaluation_framework.ipynb  evaluation_performance.ipynb  example.ipynb  example_ms.ipynb  stepbystep_Makinen2020.ipynb
paper/: generate_figures.py  paper.bib  paper.md
resources/: bm3dornl.icns
scripts/: denoise-gpu.py  denoise-orig.py  reconstruct_and_compare.py  sino.npy  verify_psd_fix.py  version.py
src/bm3dornl/: __init__.py  aggregation.py  block_matching.py  bm3d.py  denoiser.py  denoiser_gpu.py  fourier_svd.py  gpu_utils.py  noise_analysis.py  phantom.py  plot.py  signal.py  svdmg.py  utils.py
src/rust_core/: Cargo.toml
src/rust_core/benches/: bm3d_benchmarks.rs
src/rust_core/crates/bm3d_core/: Cargo.toml  README.md
src/rust_core/crates/bm3d_core/benches/: bm3d_benchmarks.rs
src/rust_core/crates/bm3d_core/examples/: issue93_memory_bench.rs  memory_bench.rs
src/rust_core/crates/bm3d_core/src/: block_matching.rs  filtering.rs  float_trait.rs  fourier_svd.rs  lib.rs  multiscale.rs  noise_estimation.rs  orchestration.rs  pipeline.rs  streak.rs  svdmg.rs  transforms.rs  utils.rs
src/rust_core/crates/bm3d_gui_egui/: Cargo.toml  README.md  pyproject.toml
src/rust_core/crates/bm3d_gui_egui/src/: main.rs  processing.rs
src/rust_core/crates/bm3d_gui_egui/src/data/: loader.rs  mod.rs  volume.rs
src/rust_core/crates/bm3d_gui_egui/src/ui/: axis_map.rs  colormap.rs  compare_view.rs  hdf5_tree.rs  histogram.rs  mod.rs  parameters.rs  save_dialog.rs  slice_view.rs  window_level.rs
src/rust_core/crates/bm3d_python/: Cargo.toml  test_svd_mg.py
src/rust_core/crates/bm3d_python/src/: lib.rs
src/rust_core/src/: block_matching.rs  filtering.rs  lib.rs  pipeline.rs  streak.rs  transforms.rs
study/: BENCHMARK_REPORT.md  README.md  RESULTS_SUMMARY.md  joss_comparison.py  pixi.toml  unified_visualization.py
study/bm3d_streak_test/: pixi.toml  run_bm3d_streak.py  test_bm3d_streak.py
study/paramter_tuning/: bm3dornl_parameter_tunning.db  bm3dornl_parameter_tunning_full.db  optuna_bm3dornl.py
study/results/apple_silicon/: consolidated_results.csv  results.csv
study/results/apple_silicon/data/: metrics.csv  result_TomoPy_BSD_sort.npy  result_TomoPy_FW_Münch.npy  result_TomoPy_SF_Vo.npy  result_bm3dornl_generic.npy  result_bm3dornl_multiscale.npy  result_bm3dornl_streak.npy  sinogram_clean.npy  sinogram_rings.npy
study/results/linux_x86_64/: bm3d_streak_results.csv  consolidated_results.csv  results.csv
study/results/linux_x86_64/data/: bm3d_streak_metrics.csv  metrics.csv  result_Fourier-SVD.npy  result_TomoPy_BSD_sort.npy  result_TomoPy_FW_Münch.npy  result_TomoPy_SF_Vo.npy  result_bm3d-streak-removal.npy  result_bm3dornl_generic.npy  result_bm3dornl_multiscale.npy  result_bm3dornl_streak.npy  sinogram_clean.npy  sinogram_rings.npy
tests/: conftest.py  test_fourier_svd.py  test_progress.py  test_svdmg.py  test_version.py
tests/data/: readme.md
tests/integration/: readme.md  test_f64_precision.py  test_rust_backend.py  test_streak_improvement.py
tests/scripts/: denoise-gpu.py  denoise-orig.py
tests/unit/: readme.md
tests/unit/bm3dornl/: test_aggregation.py  test_block_matching.py  test_bm3d.py  test_bm3d_collaborative_filtering.py  test_bm3d_full.py  test_bm3d_lite.py  test_bm3d_ring_artifact_removal.py  test_bm3d_ring_artifact_removal_ms.py  test_bm3d_shrinkage.py  test_denoiser.py  test_denoiser_gpu.py  test_gpu_utils.py  test_noise_analysis.py  test_phantom.py  test_plot.py  test_signal.py  test_streak.py  test_utils.py
