[project]
name = "bm3dornl"
description = "BM3D for streak artifact removal in neutron imaging"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
]
license = { text = "MIT" }
keywords = ["BM3D", "image processing", "neutron imaging", "denoising", "tomography", "ring artifacts", "Rust"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/ornlneutronimaging/bm3dornl"
repository = "https://github.com/ornlneutronimaging/bm3dornl"
documentation = "https://bm3dornl.readthedocs.io/en/latest/"
issues = "https://github.com/ornlneutronimaging/bm3dornl/issues"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bm3dornl.bm3d_rust"
manifest-path = "src/rust_core/Cargo.toml"
python-source = "src"

[tool.black]
line-length = 119

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/bm3dornl/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "cuda_required: legacy test requires CUDA (no longer supported, kept for reference)."
]

[tool.pylint]
max-line-length = 120
disable = ["too-many-locals",
           "too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "duplicate-code"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
bm3dornl = { path = ".", editable = true }

[tool.pixi.tasks]
build = "maturin develop --release"
test-rust = { cmd = "PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1 cargo test", cwd = "src/rust_core" }
test-python = "pytest"
test = { depends-on = ["test-rust", "test-python"] }
bench = "python benchmarks/measure_stack_speed.py"
clean = "cargo clean --manifest-path src/rust_core/Cargo.toml"

[tool.pixi.dependencies]
python = "3.12.*"
maturin = ">=1.11.2,<2"
pytest = ">=9.0.2,<10"
numpy = "1.26.*"
pip = ">=25.3,<26"
setuptools = ">=80.9.0,<81"
h5py = ">=3.15.1,<4"
matplotlib = ">=3.10.8,<4"
jupyter = ">=1.1.1,<2"
