[project]
name = "bm3dornl"
version = "0.7.1"
description = "BM3D for streak artifact removal in neutron imaging"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["BM3D", "image processing", "neutron imaging", "denoising", "tomography", "ring artifacts", "Rust"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/ornlneutronimaging/bm3dornl"
repository = "https://github.com/ornlneutronimaging/bm3dornl"
documentation = "https://bm3dornl.readthedocs.io/en/latest/"
issues = "https://github.com/ornlneutronimaging/bm3dornl/issues"

[project.optional-dependencies]
gui = ["bm3dornl-gui==0.7.1"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bm3dornl.bm3d_rust"
manifest-path = "src/rust_core/crates/bm3d_python/Cargo.toml"
python-source = "src"

[tool.black]
line-length = 119

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]

[tool.pylint]
max-line-length = 120
disable = ["too-many-locals",
           "too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "duplicate-code"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
bm3dornl = { path = ".", editable = true }

[tool.pixi.tasks]
build = "maturin develop --release"
test-rust = { cmd = "PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1 cargo test --workspace", cwd = "src/rust_core" }
test-python = "pytest"
test = { depends-on = ["test-rust", "test-python"] }
bench = "python benchmarks/measure_stack_speed.py"
bench-rust = { cmd = "cargo bench -p bm3d_core", cwd = "src/rust_core" }
clean = "cargo clean --manifest-path src/rust_core/Cargo.toml"
gui = { cmd = "bash -c 'unset HDF5_DIR && cargo run --release -p bm3d_gui_egui'", cwd = "src/rust_core" }
gui-debug = { cmd = "bash -c 'unset HDF5_DIR && cargo run -p bm3d_gui_egui'", cwd = "src/rust_core" }
gui-bundle = { cmd = "bash -c 'unset HDF5_DIR && cargo bundle --release'", cwd = "src/rust_core/crates/bm3d_gui_egui" }
version-show = "python scripts/version.py show"
version-sync = "python scripts/version.py sync"
version-patch = "python scripts/version.py patch"
version-minor = "python scripts/version.py minor"
version-major = "python scripts/version.py major"

[tool.pixi.dependencies]
python = "3.12.*"
maturin = ">=1.11.2,<2"
pytest = ">=9.0.2,<10"
numpy = "1.26.*"
pip = ">=25.3,<26"
setuptools = ">=80.9.0,<81"
h5py = ">=3.15.1,<4"
matplotlib = ">=3.10.8,<4"
jupyter = ">=1.1.1,<2"
hdf5 = ">=1.14.0"
pkg-config = "*"
scipy = ">=1.17.0,<2"
scikit-learn = ">=1.8.0,<2"
pywavelets = ">=1.9.0,<2"

[tool.pixi.activation.env]
HDF5_DIR = "$CONDA_PREFIX"
