[package]
name = "bm3d_core"
version.workspace = true
edition.workspace = true
description = "Pure Rust BM3D denoising algorithm core"
license = "MIT"
repository = "https://github.com/ornlneutronimaging/bm3dornl"

[lib]
name = "bm3d_core"
crate-type = ["rlib"]

[dependencies]
ndarray = { workspace = true }
num-traits = "0.2"
rayon = { workspace = true }
rustfft = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_distr = "0.4"

[[bench]]
name = "bm3d_benchmarks"
harness = false
