[package]
name = "bm3d_gui_egui"
version.workspace = true
edition.workspace = true
description = "GUI application for BM3D ring artifact removal"
license = "MIT"
repository = "https://github.com/ornlneutronimaging/bm3dornl"

[[bin]]
name = "bm3dornl-gui"
path = "src/main.rs"
test = false  # GUI binary requires HDF5 runtime; tested manually

[dependencies]
eframe = "0.29"
egui_plot = "0.29"
hdf5-metno = { version = "0.11", features = ["static", "zlib"] }
hdf5-metno-sys = { version = "0.10", features = ["static", "zlib", "threadsafe"] }
rfd = "0.15"
tiff = "0.9"
ndarray = "0.15"
bm3d_core = { path = "../bm3d_core" }
