[package]
name = "bm3d_python"
version.workspace = true
edition.workspace = true
description = "PyO3 Python bindings for BM3D denoising"

[lib]
name = "bm3d_rust"
crate-type = ["cdylib"]

[dependencies]
bm3d_core = { path = "../bm3d_core" }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
ndarray = { workspace = true }
